--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-		<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Play:400,700" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron:400,700" rel="stylesheet">
 		
 		<link rel="shortcut icon" href="favicon.png">
@@ -39,8 +39,8 @@
 			
 			
 			<div id="d_journal" class="main_panel">
-				<div class="padding0"><h3>JOURNAL</h3></div>
-				<div class="padding0 fitmax"><div id="journal_contents"></div></div>
+				<!-- <div class="padding0"><h3>JOURNAL</h3></div> -->
+				<div class="padding fitmax"><div id="journal_contents"></div></div>
 				<div class="padding0 horizontal_frames">
 					<div class="padding"><button type="button" onclick="" class="journal_btn" id="journal_leftpage"><img src="img/ui_left.png" /></button></div>
 					<div class="padding"><button type="button" onclick="journalChangePage(null)" class="journal_btn" id="journal_tonindex"><img src="img/ui_index.png" /></button></div>
@@ -51,7 +51,7 @@
 			
 			<div id="d_inventory" class="main_panel">
 				<div class="padding0"><h3>INVENTORY</h3></div>
-				<div id="inventory_area" class="padding2"></div>
+				<div class="padding2 fitmax"><div id="inventory_area" class="padding0"></div></div>
 			</div>
 			
 			<div id="d_coder" class="main_panel">
